pracaInz/force-app/main/default/objects/Opportunity/fields/Company_Product__c.field-meta.xml
<CustomField>
    <fullName>Company_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Company Product</label>
    <referenceTo>Company_Product__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>