pracaInz/force-app/main/default/objects/Opportunity/fields/Package_price__c.field-meta.xml
<CustomField>
    <fullName>Package_price__c</fullName>
    <inlineHelpText>Price per package</inlineHelpText>
    <label>Price per package</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>