pracaInz/force-app/main/default/objects/Opportunity/recordTypes/Customer.recordType-meta.xml
<RecordType>
    <fullName>Customer</fullName>
    <active>true</active>
    <businessProcess>Customer</businessProcess>
    <description>Opportunity for Customer</description>
    <label>Customer</label>
</RecordType>