pracaInz/force-app/main/default/objects/Opportunity/recordTypes/Supplier.recordType-meta.xml
<RecordType>
    <fullName>Supplier</fullName>
    <active>true</active>
    <businessProcess>Supplier</businessProcess>
    <description>Opportunity for Supplier</description>
    <label>Supplier</label>
</RecordType>