pracaInz/force-app/main/default/objects/Opportunity/validationRules/Amount_Must_Be_Set_To_CloseWon.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Must_Be_Set_To_CloseWon</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(StageName, &apos;Closed Won&apos;), ISNULL(Amount))</errorConditionFormula>
    <errorDisplayField>Amount</errorDisplayField>
    <errorMessage>You need to have price to Close Won Opportunity.</errorMessage>
</ValidationRule>