pracaInz/force-app/main/default/objects/Opportunity/validationRules/Product_must_be_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_must_be_selected</fullName>
    <active>true</active>
    <errorConditionFormula>IF(RecordType.Name = &apos;Customer&apos; &amp;&amp; NOT(ISBLANK(Product__c)) , false, 
 IF(RecordType.Name = &apos;Supplier&apos; &amp;&amp; NOT(ISBLANK( Company_Product__c)), false, true))</errorConditionFormula>
    <errorMessage>You need to select Product or Company Product</errorMessage>
</ValidationRule>